fix marquee overflow

--- a/src/components/Pressroom/SafeInNumbers/styles.module.css
+++ b/src/components/Pressroom/SafeInNumbers/styles.module.css
@@ -37,6 +37,23 @@
   color: transparent;
 }
 
+.gradientBase {
+  position: absolute;
+  width: 94px;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  background: linear-gradient(270deg, rgba(18, 19, 18, 0) 0%, var(--mui-palette-background-default) 100%);
+  z-index: 1;
+}
+
+.gradientFlipped {
+  left: auto;
+  right: 0;
+  width: 138px;
+  transform: scaleX(-1);
+}
+
 @keyframes slide {
   to {
     transform: translate(-50%);
@@ -47,5 +64,13 @@
   .value {
     font-size: 80px;
     line-height: 100px;
+  }
+
+  .gradientBase {
+    width: 120px;
+  }
+
+  .gradientFlipped {
+    width: 120px;
   }
 }
